# sweden-tax-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.gpu  Dockerfile.spaces  README.md  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.in  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
example-dataset/: chunks.jsonl  chunks_converted.jsonl
monitoring/alertmanager/: alertmanager.yml
monitoring/grafana/dashboards/: api_overview.json  gpu_overview.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml
monitoring/prometheus/: alerts.yml  prometheus.yml
monitoring/runbooks/: gpu_fallback_runbook.txt  reconcile_repair_runbook.txt  retrieve_incident_runbook.txt
requirements/: base.in  dev.in  ml.in  ui.in
scripts/: entrypoint.sh  ingest_documents_jsonl.py  migrate_dynamo_to_sqlite.py
src/api/: main.py  schemas.py
src/core/: config.py  dependencies.py  exceptions.py  security.py
src/db/: chroma_client.py  document_repo.py  dynamo_client.py  sqlite_document_repo.py
src/engine/: llm_engine.py  rag_core.py
src/frontend/: app.py
src/pipelines/vector_ingest/: __init__.py  chunk_ingest_runner.py  dataset_normalizer.py  dataset_validator.py  ingest_precheck.py  pipeline_cli.py
src/services/: chunk_ingest_service.py
tests/: inspect_dbs.py  test_api.py  test_chroma.py  test_dynamo.py  test_engine.py  test_integration_reconcile.py  test_llm.py  test_repo.py  test_security.py  test_sqlite_repo.py
